--- a/client/src/index.html
+++ b/client/src/index.html
@@ -18,8 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Josefin+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="manifest" href="manifest.webmanifest" />
-    <meta name="theme-color" content="#1976d2" />
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
+    <meta name="theme-color" content="#4db6ac" />
   </head>
   <body>
     <app-root></app-root>
